examples/type_system/failing/56_strict_any_nested_rejected.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

public fn first(xs: List<Any>) -> Any {
    1
}

fn main() -> Unit {
}
